bindings/swift/Sources/CRustPdf/include/pdf.h

/**
 * Opaque document handle. The C side only ever sees `*mut PdfDocument`.
 */
typedef struct PdfDocument PdfDocument;
/**
 * Opaque editable-document handle.
 */
typedef struct PdfEditable PdfEditable;
/**
 * Options for deferred/external signing, carried across the C ABI. NULL string
 * fields and a zero `policy_hash_len` mean "absent". `certification` is the
 * DocMDP `/P` value (0 = none, 1/2/3); `estimated_size` of 0 uses the default.
 */
typedef struct {
    const char *reason;
    const char *location;
    const char *name;
    /**
     * Non-zero selects PAdES-B-B (`ETSI.CAdES.detached`).
     */
    int pades;
    /**
     * DocMDP certification level: 0 = none, 1/2/3 = `/P` value.
     */
    int certification;
    /**
     * Reserved `/Contents` bytes; 0 = library default (8192).
     */
    uintptr_t estimated_size;
    /**
     * Signature-policy OID (PAdES-EPES / ICP-Brasil); NULL = no policy.
     */
    const char *policy_oid;
    /**
     * Policy hash bytes (with `policy_hash_len`); ignored if `policy_oid` NULL.
     */
    const uint8_t *policy_hash;
    uintptr_t policy_hash_len;
    /**
     * Policy hash algorithm OID; NULL = SHA-256.
     */
    const char *policy_hash_alg_oid;
    /**
     * SPURI qualifier; NULL = none.
     */
    const char *policy_uri;
    /**
     * Non-zero draws a **visible** signature using the fields below.
     */
    int visible;
    /**
     * 0-based page index for the visible appearance.
     */
    uintptr_t vis_page;
    /**
     * Appearance rectangle `[x0, y0, x1, y1]` in page points.
     */
    double vis_rect[4];
    /**
     * Text lines for the appearance, separated by `\n`; NULL = none.
     */
    const char *vis_text;
    /**
     * PNG/JPEG bytes of a handwritten-signature image (with `vis_image_len`);
     * NULL/0 = no image.
     */
    const uint8_t *vis_image;
    uintptr_t vis_image_len;
} PdfSigningOptions;
/**
 * Callback invoked to produce the raw RSA PKCS#1 v1.5 signature (over SHA-256
 * of `data`) from a remote HSM. Write the signature into `sig_buf` (capacity
 * `sig_cap`), set `*sig_len`, and return 0 on success (non-zero = failure).
 */
typedef int (*PdfSignHashFn)(void *ctx,
                             const uint8_t *data,
                             uintptr_t data_len,
                             uint8_t *sig_buf,
                             uintptr_t sig_cap,
                             uintptr_t *sig_len);
/**
 * Add a clickable web link over `(x0,y0,x1,y1)` opening `uri` on the current page.
 *
 * # Safety
 * `doc` must be valid with at least one page; `uri` a valid C string.
 */
int pdf_page_link_uri(PdfDocument *doc,
                            double x0,
                            double y0,
                            double x1,
                            double y1,
                            const char *uri);
/**
 * Add an internal link over `(x0,y0,x1,y1)` jumping to `target_page` (0-based)
 * on the current page. `has_top` != 0 scrolls so `top` is at the top of view.
 *
 * # Safety
 * `doc` must be valid with at least one page.
 */
int pdf_page_link_to_page(PdfDocument *doc,
                                double x0,
                                double y0,
                                double x1,
                                double y1,
                                uintptr_t target_page,
                                double top,
                                int has_top);
/**
 * Add the document outline from a **flat, pre-order** list. Each entry has a
 * `level` (0 = top-level, 1 = child, …), a `title`, a target `page` (0-based),
 * and an optional `top` (used when `has_tops[i]` != 0). The nested tree is
 * rebuilt from the level sequence.
 *
 * # Safety
 * All arrays have `count` entries and are readable; `titles[i]` are valid C
 * strings.
 */
int pdf_document_add_bookmarks(PdfDocument *doc,
                                     uintptr_t count,
                                     const int *levels,
                                     const char *const *titles,
                                     const uintptr_t *pages,
                                     const double *tops,
                                     const int *has_tops);
/**
 * Make the document a ZUGFeRD / Factur-X invoice: embed `xml` as `factur-x.xml`,
 * mark it PDF/A-3b, and add the Factur-X XMP at `profile` (0=Minimum, 1=BasicWL,
 * 2=Basic, 3=EN 16931, 4=Extended).
 *
 * # Safety
 * `doc` valid; `xml`/`len` readable.
 */
int pdf_document_facturx(PdfDocument *doc, const uint8_t *xml, uintptr_t len, int profile);
/**
 * Check/uncheck a checkbox field by name. `out_found` (if non-NULL) gets 1/0.
 *
 * # Safety
 * `ed`, `name` valid; `out_found` NULL or writable.
 */
int pdf_editable_set_checkbox(PdfEditable *ed, const char *name, int checked, int *out_found);
/**
 * Select a radio button by its export value. `out_found` (if non-NULL) gets 1/0.
 *
 * # Safety
 * `ed`, `name`, `export_value` valid; `out_found` NULL or writable.
 */
int pdf_editable_set_radio(PdfEditable *ed,
                                 const char *name,
                                 const char *export_value,
                                 int *out_found);
/**
 * Set a choice (dropdown/list) field value. `out_found` (if non-NULL) gets 1/0.
 *
 * # Safety
 * `ed`, `name`, `value` valid; `out_found` NULL or writable.
 */
int pdf_editable_set_choice(PdfEditable *ed,
                                  const char *name,
                                  const char *value,
                                  int *out_found);
/**
 * Flatten all interactive form fields into static page content (removes the
 * `/AcroForm` and widgets).
 *
 * # Safety
 * `ed` must be valid.
 */
int pdf_editable_flatten_forms(PdfEditable *ed);
/**
 * Write the document's terminal field names (newline-separated) into a buffer.
 *
 * # Safety
 * `ed`, `out_ptr`, `out_len` valid.
 */
int pdf_editable_field_names(const PdfEditable *ed,
                                   unsigned char **out_ptr,
                                   uintptr_t *out_len);
/**
 * Stamp a diagonal text watermark across every page (standard Helvetica).
 * `rotation_deg` is counter-clockwise; `opacity` in 0..=1.
 *
 * # Safety
 * `ed`, `text` valid.
 */
int pdf_editable_watermark_text(PdfEditable *ed,
                                      const char *text,
                                      double size,
                                      double r,
                                      double g,
                                      double b,
                                      double opacity,
                                      double rotation_deg,
                                      int opaque_background);
/**
 * Stamp an image (from a JPEG/PNG file `path`) centered on every page at
 * `width`×`height` points, rotated `rotation_deg` degrees, at `opacity`.
 * Respects page `/Rotate` and `/CropBox`.
 *
 * # Safety
 * `ed`, `path` valid.
 */
int pdf_editable_watermark_image_file(PdfEditable *ed,
                                            const char *path,
                                            double width,
                                            double height,
                                            double opacity,
                                            double rotation_deg);
/**
 * Redact rectangular regions on page `index`: `rects` holds `count*4` doubles
 * (x0,y0,x1,y1 per region). The covered content is removed and a black box is
 * drawn. `out_found` (if non-NULL) gets 1 if the page existed.
 *
 * # Safety
 * `ed` valid; `rects` points to `count*4` doubles; `out_found` NULL or writable.
 */
int pdf_editable_redact(PdfEditable *ed,
                              uintptr_t index,
                              const double *rects,
                              uintptr_t count,
                              int *out_found);
/**
 * Convert the loaded document to PDF/A at `level` (0=A-1b, 1=A-2b, 3=A-3b).
 * Fails if fonts are not embedded or a level-A profile is requested.
 *
 * # Safety
 * `ed` must be valid.
 */
int pdf_editable_convert_to_pdfa(PdfEditable *ed, int level);
/**
 * Append a Document Security Store (`/DSS`, PAdES-B-LT) with the given DER
 * certificates and CRLs. Each is passed as parallel `ptr`/`len` arrays.
 *
 * # Safety
 * `cert_ptrs`/`cert_lens` have `cert_count` entries; `crl_ptrs`/`crl_lens`
 * have `crl_count`; every entry readable; `out_ptr`/`out_len` writable.
 */
int pdf_add_dss(const uint8_t *pdf,
                      uintptr_t pdf_len,
                      const uint8_t *const *cert_ptrs,
                      const uintptr_t *cert_lens,
                      uintptr_t cert_count,
                      const uint8_t *const *crl_ptrs,
                      const uintptr_t *crl_lens,
                      uintptr_t crl_count,
                      unsigned char **out_ptr,
                      uintptr_t *out_len);
/**
 * **Two-phase signing, phase 1.** Prepare `pdf` for deferred signing: returns
 * the prepared PDF (`out_doc`/`out_doc_len`, with a zero-filled `/Contents`
 * placeholder) and the exact bytes to be signed (`out_tbs`/`out_tbs_len`).
 * Hash `out_tbs` (SHA-256), sign remotely / build the CMS container, then call
 * [`pdf_sign_complete`]. The private key never reaches this library.
 *
 * # Safety
 * `pdf` readable for `pdf_len`; `params` NULL or a valid [`PdfSigningOptions`]; the
 * four out pointers writable. Both emitted buffers are freed with
 * `pdf_buffer_free`.
 */
int pdf_sign_begin(const uint8_t *pdf,
                         uintptr_t pdf_len,
                         const PdfSigningOptions *params,
                         unsigned char **out_doc,
                         uintptr_t *out_doc_len,
                         unsigned char **out_tbs,
                         uintptr_t *out_tbs_len);
/**
 * **Two-phase signing, phase 2.** Embed a complete DER CMS / PKCS#7 `container`
 * into the prepared `document` (from [`pdf_sign_begin`]), producing the final
 * signed PDF in `out_ptr`/`out_len`.
 *
 * # Safety
 * `document`/`container` readable for their lengths; `out_ptr`/`out_len`
 * writable.
 */
int pdf_sign_complete(const uint8_t *document,
                            uintptr_t document_len,
                            const uint8_t *container,
                            uintptr_t container_len,
                            unsigned char **out_ptr,
                            uintptr_t *out_len);
/**
 * **Model A — external signer callback.** Sign `pdf` without handing this
 * library a key: it builds the CMS signed attributes and calls `callback`
 * (with `ctx`) for the raw RSA signature, then assembles and embeds the CMS.
 * `cert_der` is the signer certificate; `chain_ptrs`/`chain_lens`/`chain_count`
 * are intermediate certificates (DER), supplied independently of the key.
 *
 * # Safety
 * `pdf`/`cert_der` readable for their lengths; each `chain_ptrs[i]` readable
 * for `chain_lens[i]`; `params` NULL or valid; `callback` a valid function
 * pointer; `out_ptr`/`out_len` writable.
 */
int pdf_sign_with(const uint8_t *pdf,
                        uintptr_t pdf_len,
                        const uint8_t *cert_der,
                        uintptr_t cert_len,
                        const uint8_t *const *chain_ptrs,
                        const uintptr_t *chain_lens,
                        uintptr_t chain_count,
                        const PdfSigningOptions *params,
                        PdfSignHashFn callback,
                        void *ctx,
                        unsigned char **out_ptr,
                        uintptr_t *out_len);
/**
 * List the signature fields in `pdf` (detect existing signatures before
 * signing). Emits a newline-separated text buffer in `out_ptr`/`out_len`; each
 * line is `<0|1>\t<field-name>` where the first column is 1 when the field is
 * already signed. An empty buffer means no signature fields.
 *
 * # Safety
 * `pdf` readable for `pdf_len`; `out_ptr`/`out_len` writable. The buffer is
 * freed with `pdf_buffer_free`.
 */
int pdf_list_signatures(const uint8_t *pdf,
                              uintptr_t pdf_len,
                              unsigned char **out_ptr,
                              uintptr_t *out_len);
/**
 * Validate every signature in `data`/`len` and write a JSON array describing
 * each one into `out_ptr`/`out_len` (freed with `pdf_buffer_free`). Each element
 * is `{"field_name","sub_filter","signer","covers_whole_document","digest_valid",
 * "signature_valid","is_valid","byte_range":[..4]}`. An empty array `[]` means
 * the document is unsigned.
 *
 * # Safety
 * `data`/`len` readable; `out_ptr`/`out_len` writable.
 */
int pdf_verify_signatures_json(const uint8_t *data,
                                     uintptr_t len,
                                     unsigned char **out_ptr,
                                     uintptr_t *out_len);