bindings/csharp/RustPdf/Native.cs


    [LibraryImport(Lib)]
    internal static partial int pdf_add_dss(
        byte[] pdf, nuint pdfLen,
        IntPtr[] certPtrs, nuint[] certLens, nuint certCount,
        IntPtr[] crlPtrs, nuint[] crlLens, nuint crlCount,
        out IntPtr outPtr, out nuint outLen);

    // ---- Tier 1: hyperlinks + bookmarks (Document) --------------------------

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_page_link_uri(
        IntPtr doc, double x0, double y0, double x1, double y1, string uri);

    [LibraryImport(Lib)]
    internal static partial int pdf_page_link_to_page(
        IntPtr doc, double x0, double y0, double x1, double y1,
        nuint targetPage, double top, int hasTop);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_document_add_bookmarks(
        IntPtr doc, nuint count, int[] levels,
        [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPUTF8Str)] string[] titles,
        nuint[] pages, double[] tops, int[] hasTops);

    // ---- Tier 2: ZUGFeRD / Factur-X (Document) ------------------------------

    [LibraryImport(Lib)]
    internal static partial int pdf_document_facturx(IntPtr doc, byte[] xml, nuint len, int profile);

    // ---- Tier 1: form fill + flatten + watermark (EditableDoc) --------------

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_editable_set_checkbox(IntPtr ed, string name, int checkedFlag, out int outFound);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_editable_set_radio(IntPtr ed, string name, string exportValue, out int outFound);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_editable_set_choice(IntPtr ed, string name, string value, out int outFound);

    [LibraryImport(Lib)]
    internal static partial int pdf_editable_flatten_forms(IntPtr ed);

    [LibraryImport(Lib)]
    internal static partial int pdf_editable_field_names(IntPtr ed, out IntPtr outPtr, out nuint outLen);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_editable_watermark_text(
        IntPtr ed, string text, double size, double r, double g, double b, double opacity, double rotationDeg);

    [LibraryImport(Lib, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int pdf_editable_watermark_image_file(
        IntPtr ed, string path, double width, double height, double opacity);

    // ---- Tier 2: redaction + PDF/A conversion (EditableDoc) -----------------

    [LibraryImport(Lib)]
    internal static partial int pdf_editable_redact(
        IntPtr ed, nuint index, double[] rects, nuint count, out int outFound);

    [LibraryImport(Lib)]
    internal static partial int pdf_editable_convert_to_pdfa(IntPtr ed, int level);

    // ---- Tier 2: signature validation (module-level) ------------------------

    [LibraryImport(Lib)]
    internal static partial int pdf_verify_signatures_json(
        byte[] data, nuint len, out IntPtr outPtr, out nuint outLen);

    // ---- Deferred / external (HSM) signing — issue #41 P0 -------------------

    /// <summary>Mirrors the C-ABI <c>PdfSigningOptions</c> (deferred-signing options).
    /// All pointer fields are NULL when unused; a zero <c>EstimatedSize</c> or
    /// <c>PolicyHashLen</c> means "absent".</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct SigningOptionsNative
    {
        public IntPtr Reason;
        public IntPtr Location;
        public IntPtr Name;
        public int Pades;
        public int Certification;
        public nuint EstimatedSize;
        public IntPtr PolicyOid;
        public IntPtr PolicyHash;
        public nuint PolicyHashLen;
        public IntPtr PolicyHashAlgOid;
        public IntPtr PolicyUri;
    }

    [LibraryImport(Lib)]
    internal static partial int pdf_sign_begin(
        byte[] pdf, nuint pdfLen, in SigningOptionsNative pms,
        out IntPtr outDoc, out nuint outDocLen, out IntPtr outTbs, out nuint outTbsLen);

    [LibraryImport(Lib)]
    internal static partial int pdf_sign_complete(
        byte[] document, nuint documentLen, byte[] container, nuint containerLen,
        out IntPtr outPtr, out nuint outLen);

    [LibraryImport(Lib)]
    internal static unsafe partial int pdf_sign_with(
        byte[] pdf, nuint pdfLen, byte[] certDer, nuint certLen,
        IntPtr[] chainPtrs, nuint[] chainLens, nuint chainCount,
        in SigningOptionsNative pms,
        delegate* unmanaged[Cdecl]<IntPtr, byte*, nuint, byte*, nuint, nuint*, int> callback,
        IntPtr ctx, out IntPtr outPtr, out nuint outLen);

    [LibraryImport(Lib)]
    internal static partial int pdf_list_signatures(
        byte[] pdf, nuint pdfLen, out IntPtr outPtr, out nuint outLen);
}
